2002-07-15  Mark Salter  <msalter@redhat.com>

	* include/pkgconf/mlt_arm_xscale_iq80321_rom.mlt: Add mmu_tables section.
	* include/pkgconf/mlt_arm_xscale_iq80321_rom.ldi: Regenerated.
	* include/pkgconf/mlt_arm_xscale_iq80321_rom.h: Ditto.

2002-05-28  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_xscale_iq80321.cdl: Add HAL_PLATFORM_MACHINE_TYPE.

	* misc/redboot_RAM.ecm: Changed Linux address.
	* misc/redboot_ROM.ecm: Ditto.

2002-05-24  Jonathan Larmour  <jlarmour@redhat.com>

	* src/hal_diag.c: Support dynamic getting and setting of baud rates.
	* cdl/hal_arm_xscale_iq80321.cdl: implements
	CYGINT_HAL_VIRTUAL_VECTOR_COMM_BAUD_SUPPORT

2002-05-07  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_arm_xscale_iq80321.cdl: 
	Standardize CYGNUM_HAL_VIRTUAL_VECTOR_CONSOLE_CHANNEL_DEFAULT usage.

2002-04-22  Jonathan Larmour  <jlarmour@redhat.com>

	* misc/redboot_RAM.ecm: Enable GDB remote file I/O support.
	* misc/redboot_RAM_ALTMAP.ecm: Ditto.
	* misc/redboot_ROM.ecm: Ditto.
	* misc/redboot_ROM_ALTMAP.ecm: Ditto.

2002-04-16  John Dallaway  <jld@redhat.com>

	* cdl/hal_arm_xscale_iq80321.cdl: Use arm-elf toolchain by default.

2002-03-25  Mark Salter  <msalter@redhat.com>

	* include/hal_platform_extras.h: Use X=1,C=1,B=1 for RAM.
	* include/hal_platform_setup.h: Fix handling of x16 DIMM modules and
	registered vs. non-registered handling.

2002-03-06  Jesper Skov  <jskov@redhat.com>

	* misc/redboot_RAM.ecm: Added zlib and DNS packages.
	* misc/redboot_ROM.ecm: Same.

2002-02-27  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_xscale_iq80321.cdl: Enable battery test by default.

	* include/hal_platform_setup.h: Get battery test data before enabling
	ECC.

2002-02-24  Mark Salter  <msalter@redhat.com>

	* src/diag/xscale_test.c: Don't include battery test unless
	CYGSEM_HAL_ARM_IQ80321_BATTERY_TEST is defined.
	* src/diag/battery.c: Ditto
	
	* include/iq80321.h (SDRAM_BATTERY_TEST_ADDR): Use uncached addresses.
