@@ -1,3 +1,14 @@
+2002-08-12  Mark Salter  <msalter@redhat.com>
+
+	* include/hal_platform_setup.h: Do some ATU initialization
+	before scrubbing, so PC BIOS can continue booting during
+	time consuming scrub.
+
+	* src/iq80321_pci.c (cyg_hal_plf_pci_init): Always set ATUCMD
+	register. Moved some ATU initialization to hal_platform_setup.h.
+	(cyg_hal_plf_wait_for_bios): Moved some ATU initialization to
+	hal_platform_setup.h.
+
 2002-07-15  Mark Salter  <msalter@redhat.com>
 
 	* include/pkgconf/mlt_arm_xscale_iq80321_rom.mlt: Add mmu_tables section.
